syntax = "proto3";

package mergerapi;

option go_package = "./mergerapi";
option java_multiple_files = true;
option java_outer_classname = "MergerApi";


service BaseService {
  rpc Connect(stream Request) returns (stream Response);
}


message Text {
  Format format = 1;
  string value = 2;

  enum Format {
    PLAIN = 0;
    MARKDOWN = 1;
  }
}
message Media {
  Type type = 1;
  optional string caption = 2;
  bool spoiler = 3;
  string url = 4;

  enum Type {
    AUDIO = 0;
    VIDEO = 1;
    FILE = 2;
    PHOTO = 3;
    STICKER = 4;
  }
}

// INPUT:
message Request {
  int64 created_at = 1;
  optional string author = 2;
  bool isSilent = 3;
  oneof body {
    Text text = 4;
    Media media = 5;
  }
}

// Message:
message Response {
  string id = 1;
  optional string reply_msg_id = 2;
  int64 created_at = 3;
  optional string author = 4;
  string client = 5;
  bool isSilent = 6;
  oneof body {
    Text text = 7;
    Media media = 8;
  }

}